# ModbusMCP

./: .gitignore  AGENTS.md  INSTALL_TROUBLESHOOTING.md  PYMODBUS_3.11.4_UPGRADE.md  README.md  minimal_test.py  pyproject.toml  pytest.ini  run_server.bat  run_server.ps1  setup.py  test_mcp_client.py  test_server.py
.kiro/specs/modbus-mcp-server/: design.md  requirements.md  tasks.md
.omo/notepads/modbus-alias-log-ui/: learnings.md
examples/: README.md  config.json  kiro-mcp.json  usage-examples.md  vscode-settings.json
skills/modbus-slave/: SKILL.md  mcp.json
src/modbus_mcp_server/: __init__.py  alias_manager.py  auditing_datastore.py  cli.py  client_wrapper.py  client_wrapper.py.backup  command_handlers.py  config.py  connection_manager.py  main.py  models.py  operation_log.py  server_command_handlers.py  server_manager.py  server_wrapper.py  validation.py  web_ui.py
src/modbus_mcp_server/static/: index.html
tests/: __init__.py  conftest.py  test_client_wrapper.py  test_command_handlers.py  test_connection_manager.py  test_integration.py  test_main.py  test_models.py  test_validation.py
